<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMainDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MainActivity">

        <include
            android:id="@+id/MainActivityToolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/activityMainContenedorFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainActivityToolbar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/boton_flotante"
        />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activityMainNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|left"
        android:background="@drawable/side_nav_bar"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/navigation_men" />

</androidx.drawerlayout.widget.DrawerLayout>

