<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        android:iconTint="@color/LupaActionBar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item android:id="@+id/actionbar_usuario"
        android:title="Usuario"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_firebaseLeer"
        android:title="Noticia Barriales"
        app:showAsAction="never"
        />


</menu>