<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vista.NoticiasGenerales.FragmentListaNoticiasCompacto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CATEGORIA"
        android:fontFamily="sans-serif"
        android:textSize="25dp"
        android:gravity="center"
        android:background="#fff"
        android:id="@+id/fragmentListaNoticiasTextViewcategoria"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/FragmentRecyclerViewNoticiasCompactas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>